--- a/clangnotifications/build.gradle
+++ b/clangnotifications/build.gradle
@@ -15,6 +15,8 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         buildConfigField "String", "REMOTE_REPO_BASE_URL", '"https://firebase-demo.test.worth.systems"'
+
+        buildConfigField("String", "FIREBASE_APP_KEY", "\"${firebaseAppKey}\"")
     }
 
     buildTypes {
@@ -34,8 +36,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation "com.squareup.retrofit2:converter-gson:2.6.0"
-    implementation 'com.google.firebase:firebase-messaging:19.0.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.firebase:firebase-messaging:19.0.1'
 }
 repositories {
     mavenCentral()
