added app id changed return type unit to empty body

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ android.enableJetifier=true
 kotlin.code.style=official
 
 firebaseAppKey = AIzaSyAlRXERd1G-6ciLkcKcj4RUJrhBe5_tTmk
+appId = EVillageDemo
