--- a/clangnotifications/build.gradle
+++ b/clangnotifications/build.gradle
@@ -17,6 +17,7 @@ android {
         buildConfigField "String", "REMOTE_REPO_BASE_URL", '"https://firebase-demo.test.worth.systems"'
 
         buildConfigField("String", "FIREBASE_APP_KEY", "\"${firebaseAppKey}\"")
+        buildConfigField("String", "APP_ID", "\"${appId}\"")
     }
 
     buildTypes {
