EVNS-11,13 login of a customer and poll with sending events

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".thank_you.ThankYouActivity">
+        </activity>
+        <activity android:name=".poll.PollActivity">
+        </activity>
 
         <service
                 android:name=".AppFirebaseService"
@@ -23,6 +27,8 @@
         <activity android:name=".product_details.ProductDetailsActivity">
         </activity>
         <activity android:name=".product_overview.ProductOverviewActivity">
+        </activity>
+        <activity android:name=".LoginActivity">
         </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
