--- a/clangnotifications/build.gradle
+++ b/clangnotifications/build.gradle
@@ -14,7 +14,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        buildConfigField "String", "REMOTE_REPO_BASE_URL", '"https://firebase-demo.test.worth.systems"'
+        buildConfigField "String", "REMOTE_REPO_BASE_URL", '"https://api.clang.cloud"'
 
         buildConfigField("String", "APP_ID", "\"${appId}\"")
     }
