--- a/clangnotifications/build.gradle
+++ b/clangnotifications/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
@@ -14,7 +14,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        buildConfigField "String", "REMOTE_REPO_BASE_URL", '"https://firebase-demo.test.worth.systems"'
+        buildConfigField "String", "REMOTE_REPO_BASE_URL", '"https://playground.clang.cloud"'
 
         buildConfigField("String", "APP_ID", "\"${appId}\"")
     }
