--- a/clangnotifications/build.gradle
+++ b/clangnotifications/build.gradle
@@ -16,7 +16,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         buildConfigField "String", "REMOTE_REPO_BASE_URL", '"https://firebase-demo.test.worth.systems"'
 
-        buildConfigField("String", "APP_ID", "\"${appId}\"")
+        buildConfigField("String", "CUSTOMER_ID", "\"${customerId}\"")
     }
 
     buildTypes {
