EVNS-41: start on removing the ClangActivity from library part to the demo app. WIP, does not build right now.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="nl.worth.NotificationClickedActivity" />
+
         <meta-data
                 android:name="com.google.firebase.messaging.default_notification_channel_id"
                 android:value="channel-01"/>
