--- a/clangnotifications/build.gradle
+++ b/clangnotifications/build.gradle
@@ -21,23 +21,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.2.0-alpha03'
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
     testImplementation 'junit:junit:4.12'
-    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
-    implementation "com.squareup.retrofit2:converter-gson:2.6.0"
+    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+    implementation "com.squareup.retrofit2:converter-gson:2.6.1"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.firebase:firebase-messaging:19.0.1'
     implementation 'com.android.support:recyclerview-v7'
-    implementation "androidx.security:security-crypto:1.0.0-alpha02"
-
+    implementation "androidx.security:security-crypto:1.0.0-beta01"
 }
 repositories {
     mavenCentral()
