--- a/clangnotifications/build.gradle
+++ b/clangnotifications/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'org.jetbrains.dokka'
 
 android {
     compileSdkVersion 29
@@ -28,15 +29,29 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0-alpha03'
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
     implementation "com.squareup.retrofit2:converter-gson:2.6.1"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.google.firebase:firebase-messaging:19.0.1'
+    implementation 'com.google.firebase:firebase-messaging:20.1.3'
     implementation 'com.android.support:recyclerview-v7'
     implementation "androidx.security:security-crypto:1.0.0-beta01"
 }
+
 repositories {
     mavenCentral()
+}
+
+dokka {
+    outputFormat = 'html' // use 'javadoc' to get standard java docs
+    outputDirectory = "$buildDir/javadoc"
+
+    configuration {
+        includeNonPublic = true
+        skipEmptyPackages = true
+        skipDeprecated = false
+        reportUndocumented = true
+        jdkVersion = 8
+    }
 }
