--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.3'
 
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:${dokka_version}"
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+
     }
 }
 
