--- a/clangnotifications/build.gradle
+++ b/clangnotifications/build.gradle
@@ -27,16 +27,16 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.2.0-alpha03'
+    implementation 'androidx.appcompat:appcompat:1.2.0-beta01'
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
     testImplementation 'junit:junit:4.13'
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
     implementation "com.squareup.retrofit2:converter-gson:2.6.1"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.google.firebase:firebase-messaging:20.1.3'
+    implementation 'com.google.firebase:firebase-messaging:20.1.5'
     implementation 'com.android.support:recyclerview-v7'
-    implementation "androidx.security:security-crypto:1.0.0-beta01"
+    implementation "androidx.security:security-crypto:1.0.0-rc01"
 }
 
 repositories {
