--- a/clangnotifications/build.gradle
+++ b/clangnotifications/build.gradle
@@ -12,6 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
 
+        buildConfigField "String", "BASE_URL", '"https://api.clang.cloud"'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
