--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.70'
-    ext.nav_version = '2.3.0-alpha04'
+    ext.kotlin_version = '1.4.0'
+    ext.nav_version = '2.3.0'
     ext.dokka_version = '0.10.1'
 
     repositories {
