--- a/clangnotifications/build.gradle
+++ b/clangnotifications/build.gradle
@@ -9,8 +9,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 13
-        versionName "0.0.13"
+        versionCode 14
+        versionName "0.0.14"
 
         buildConfigField "String", "BASE_URL", '"https://api.clang.cloud"'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -18,7 +18,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -27,16 +27,16 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.3.0-alpha01'
-    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
+    implementation 'androidx.appcompat:appcompat:1.3.0-alpha02'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
     testImplementation 'junit:junit:4.13'
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
     implementation "com.squareup.retrofit2:converter-gson:2.6.1"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.google.firebase:firebase-messaging:20.2.1'
+    implementation 'com.google.firebase:firebase-messaging:20.2.4'
     implementation 'com.android.support:recyclerview-v7'
-    implementation "androidx.security:security-crypto:1.1.0-alpha01"
+    implementation 'androidx.security:security-crypto:1.1.0-alpha02'
 }
 
 repositories {
