--- a/clangnotifications/build.gradle
+++ b/clangnotifications/build.gradle
@@ -12,8 +12,9 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 19
-        versionName "0.0.19"
+        versionCode 20
+        versionName "0.0.20"
+        consumerProguardFiles 'proguard-rules.pro'
 
         buildConfigField "String", "BASE_URL", '"https://api.clang.cloud"'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -21,8 +22,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            minifyEnabled false
         }
     }
 }
